--- a/CalculatorAndroid-master/app/src/main/res/layout/activity_binary_calc.xml
+++ b/CalculatorAndroid-master/app/src/main/res/layout/activity_binary_calc.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="15dp"
         android:gravity="end"
-        android:text="@string/resultado_decimal"
+        android:text="@string/_0"
         android:textSize="22sp" />
 
     <TextView
@@ -25,16 +25,16 @@
         android:ellipsize="start"
         android:gravity="end"
         android:singleLine="true"
-        android:text="@string/resultado_bin"
+        android:text="@string/_0"
         android:textSize="60sp" />
 
     <GridLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="233dp"
         android:layout_below="@id/result_binary"
-        android:rowCount="4"
         android:columnCount="4"
-        android:gravity="center">
+        android:gravity="center"
+        android:rowCount="4">
 
         <Button
             android:layout_row="0"
@@ -55,6 +55,7 @@
             android:text="@string/c" />
 
         <Button
+            android:layout_width="145dp"
             android:layout_row="0"
             android:layout_column="3"
             android:onClick="onAllClear"
@@ -129,7 +130,7 @@
         <Button
             android:layout_row="3"
             android:layout_column="3"
-            android:onClick="calculate"
+            android:onClick="calcular"
             android:text="@string/equal" />
 
     </GridLayout>
