--- a/CalculatorAndroid-master/app/src/main/res/layout/activity_binary_calc.xml
+++ b/CalculatorAndroid-master/app/src/main/res/layout/activity_binary_calc.xml
@@ -70,61 +70,61 @@
         <Button
             android:layout_row="1"
             android:layout_column="1"
-            android:onClick="computeOr"
+            android:onClick="calcularOr"
             android:text="@string/or" />
 
         <Button
             android:layout_row="1"
             android:layout_column="2"
-            android:onClick="computeAdd"
+            android:onClick="calcularSuma"
             android:text="@string/sum" />
 
         <Button
             android:layout_row="1"
             android:layout_column="3"
-            android:onClick="computeSub"
+            android:onClick="calcularResta"
             android:text="@string/rest" />
 
         <Button
             android:layout_row="2"
             android:layout_column="0"
-            android:onClick="computeNot"
+            android:onClick="calcularNot"
             android:text="@string/not" />
 
         <Button
             android:layout_row="2"
             android:layout_column="1"
-            android:onClick="computeXor"
+            android:onClick="calcularXor"
             android:text="@string/xor" />
 
         <Button
             android:layout_row="2"
             android:layout_column="2"
-            android:onClick="computeMult"
+            android:onClick="calcularMulti"
             android:text="@string/mult" />
 
         <Button
             android:layout_row="2"
             android:layout_column="3"
-            android:onClick="computeMod"
+            android:onClick="calcularModulo"
             android:text="@string/mod" />
 
         <Button
             android:layout_row="3"
             android:layout_column="0"
-            android:onClick="computeNand"
+            android:onClick="calcularNand"
             android:text="@string/nand" />
 
         <Button
             android:layout_row="3"
             android:layout_column="1"
-            android:onClick="computeNor"
+            android:onClick="calcularNor"
             android:text="@string/nor" />
 
         <Button
             android:layout_row="3"
             android:layout_column="2"
-            android:onClick="computeNxor"
+            android:onClick="calcularXnor"
             android:text="@string/nxor" />
 
         <Button
