--- a/CalculatorAndroid-master/app/src/main/res/layout/activity_main.xml
+++ b/CalculatorAndroid-master/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
 
                 <TextView
                     android:id="@+id/tvBox"
-                    android:layout_width="238dp"
+                    android:layout_width="237dp"
                     android:layout_height="match_parent"
                     android:background="#efe9b8"
                     android:maxLength="11"
@@ -42,7 +42,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:onClick="baseChange"
-                    android:text="Cambio Base" />
+                    android:text="Binario" />
 
             </LinearLayout>
 
