--- a/CalculatorAndroid-master/app/src/main/res/layout-v21/activity_binary_calc.xml
+++ b/CalculatorAndroid-master/app/src/main/res/layout-v21/activity_binary_calc.xml
@@ -9,19 +9,21 @@
     tools:context=".BinaryCalc">
 
     <TextView
-        android:id="@+id/result_decimal"
+        android:id="@+id/textoDecimal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginEnd="15dp"
+        android:background="#B2EAB925"
         android:gravity="end"
         android:text="@string/_0"
         android:textSize="22sp" />
 
     <TextView
-        android:id="@+id/result_binary"
+        android:id="@+id/textoBinario"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/result_decimal"
+        android:layout_below="@id/textoDecimal"
+        android:background="#B2EAB925"
         android:ellipsize="start"
         android:gravity="end"
         android:singleLine="true"
@@ -30,108 +32,177 @@
 
     <GridLayout
         android:layout_width="match_parent"
-        android:layout_height="233dp"
-        android:layout_below="@id/result_binary"
-        android:columnCount="4"
+        android:layout_height="260dp"
+        android:layout_below="@id/textoBinario"
+        android:columnCount="5"
         android:gravity="center"
-        android:rowCount="4">
+        android:rowCount="5">
 
         <Button
             android:layout_row="0"
             android:layout_column="0"
+            android:backgroundTint="@android:color/holo_blue_bright"
+            android:hapticFeedbackEnabled="true"
             android:onClick="pulsarCero"
+            android:shadowColor="#D58181"
             android:text="@string/_0" />
 
         <Button
             android:layout_row="0"
             android:layout_column="1"
+            android:backgroundTint="@android:color/holo_blue_bright"
+            android:hapticFeedbackEnabled="true"
             android:onClick="pulsarUno"
             android:text="@string/_1" />
 
         <Button
             android:layout_row="0"
             android:layout_column="2"
+            android:backgroundTint="@android:color/holo_red_dark"
             android:onClick="pulsarBorrar"
             android:text="@string/c" />
 
         <Button
-            android:layout_width="145dp"
+            android:layout_width="wrap_content"
             android:layout_row="0"
             android:layout_column="3"
+            android:backgroundTint="@android:color/holo_red_dark"
+            android:hapticFeedbackEnabled="true"
             android:onClick="pulsarBorrarTodo"
             android:text="@string/del" />
 
         <Button
             android:layout_row="1"
             android:layout_column="0"
+            android:background="@drawable/button_secundary_no_pressed"
+            android:hapticFeedbackEnabled="true"
             android:onClick="calcularAnd"
             android:text="@string/and" />
 
         <Button
             android:layout_row="1"
             android:layout_column="1"
+            android:background="@drawable/button_secundary_no_pressed"
+            android:hapticFeedbackEnabled="true"
             android:onClick="calcularOr"
             android:text="@string/or" />
 
         <Button
             android:layout_row="1"
             android:layout_column="2"
+            android:background="@drawable/button_terciary_no_pressed"
+            android:hapticFeedbackEnabled="true"
             android:onClick="calcularSuma"
             android:text="@string/sum" />
 
         <Button
+            android:layout_width="wrap_content"
             android:layout_row="1"
             android:layout_column="3"
+            android:background="@drawable/button_terciary_no_pressed"
+            android:hapticFeedbackEnabled="true"
             android:onClick="calcularResta"
             android:text="@string/rest" />
 
         <Button
             android:layout_row="2"
             android:layout_column="0"
+            android:background="@drawable/button_secundary_no_pressed"
+            android:hapticFeedbackEnabled="true"
             android:onClick="calcularNot"
             android:text="@string/not" />
 
         <Button
             android:layout_row="2"
             android:layout_column="1"
+            android:background="@drawable/button_secundary_no_pressed"
+            android:hapticFeedbackEnabled="true"
             android:onClick="calcularXor"
             android:text="@string/xor" />
 
         <Button
             android:layout_row="2"
             android:layout_column="2"
+            android:background="@drawable/button_terciary_no_pressed"
+            android:hapticFeedbackEnabled="true"
             android:onClick="calcularMulti"
             android:text="@string/mult" />
 
         <Button
+            android:layout_width="wrap_content"
             android:layout_row="2"
             android:layout_column="3"
+            android:background="@drawable/button_terciary_no_pressed"
+            android:hapticFeedbackEnabled="true"
             android:onClick="calcularModulo"
             android:text="@string/mod" />
 
         <Button
             android:layout_row="3"
             android:layout_column="0"
+            android:background="@drawable/button_secundary_no_pressed"
+            android:hapticFeedbackEnabled="true"
             android:onClick="calcularNand"
             android:text="@string/nand" />
 
         <Button
             android:layout_row="3"
             android:layout_column="1"
+            android:background="@drawable/button_secundary_no_pressed"
+            android:hapticFeedbackEnabled="true"
             android:onClick="calcularNor"
             android:text="@string/nor" />
 
         <Button
-            android:layout_row="3"
-            android:layout_column="2"
+            android:layout_row="4"
+            android:layout_column="0"
+            android:background="@drawable/button_secundary_no_pressed"
+            android:hapticFeedbackEnabled="true"
             android:onClick="calcularXnor"
             android:text="@string/nxor" />
 
         <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_row="3"
             android:layout_column="3"
+            android:backgroundTint="@android:color/holo_green_dark"
+            android:hapticFeedbackEnabled="true"
             android:onClick="calcular"
             android:text="@string/equal" />
+
+        <Button
+            android:id="@+id/div"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="3"
+            android:layout_column="2"
+            android:background="@drawable/button_terciary_no_pressed"
+            android:hapticFeedbackEnabled="true"
+            android:onClick="calcularDiv"
+            android:text="/" />
+
+        <Button
+            android:id="@+id/shl"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="4"
+            android:layout_column="1"
+            android:background="@drawable/button_secundary_no_pressed"
+            android:hapticFeedbackEnabled="true"
+            android:text="@string/shl"
+            android:onClick="shiftLeft" />
+
+        <Button
+            android:id="@+id/shr"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="4"
+            android:layout_column="2"
+            android:background="@drawable/button_secundary_no_pressed"
+            android:hapticFeedbackEnabled="true"
+            android:text="@string/shr"
+            android:onClick="shiftRight" />
 
     </GridLayout>
 
