--- a/CalculatorAndroid-master/app/src/main/res/layout-v21/activity_binary_calc.xml
+++ b/CalculatorAndroid-master/app/src/main/res/layout-v21/activity_binary_calc.xml
@@ -108,7 +108,7 @@
             android:layout_row="2"
             android:layout_column="0"
             android:background="@drawable/button_secundary_no_pressed"
-            android:hapticFeedbackEnabled="true"
+            android:hapticFeedbackEnabled="false"
             android:onClick="calcularNot"
             android:text="@string/not" />
 
