--- a/AboutMe/app/src/main/res/layout/activity_main.xml
+++ b/AboutMe/app/src/main/res/layout/activity_main.xml
@@ -13,5 +13,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20sp"
-        android:text="Sergio Portillo" />
+        android:text="@string/sergio_portillo" />
 </LinearLayout>
