--- a/AplicacionSpinner2/app/src/main/res/layout/activity_main.xml
+++ b/AplicacionSpinner2/app/src/main/res/layout/activity_main.xml
@@ -66,6 +66,7 @@
 
 
         <AutoCompleteTextView
+            android:id="@+id/menuReal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="none"
