--- a/AplicacionSpinner2/app/src/main/res/layout/activity_main.xml
+++ b/AplicacionSpinner2/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,14 @@
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:orientation="vertical">
+
+    <ImageView
+        android:id="@+id/imgView"
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:rotation="-90"/>
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textField"
         android:layout_width="match_parent"
@@ -104,6 +112,16 @@
         android:layout_gravity="center"
         android:layout_marginTop="32dp"
         android:text="@string/select_date"
+        android:textSize="18sp"
+        app:icon="@drawable/ic_today_24px" />
+
+    <Button
+        android:id="@+id/CARGAR"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="32dp"
+        android:text="@string/cargar"
         android:textSize="18sp"
         app:icon="@drawable/ic_today_24px" />
 
