--- a/AplicacionSpinner2/app/src/main/res/values/themes.xml
+++ b/AplicacionSpinner2/app/src/main/res/values/themes.xml
@@ -1,10 +1,10 @@
 <resources>
 
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="AppTheme" parent="@style/Theme.MaterialComponents.Light.Bridge">
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="CustomTheme" parent="Theme.AppCompat.Light">
+    <style name="CustomTheme" parent="@style/Theme.MaterialComponents.Light.Bridge">
 
         <item name="contentInsetStart">0dp</item>
         <item name="contentInsetEnd">0dp</item>
