--- a/AplicacionSpinner2/app/src/main/res/layout/activity_main.xml
+++ b/AplicacionSpinner2/app/src/main/res/layout/activity_main.xml
@@ -125,4 +125,10 @@
         android:textSize="18sp"
         app:icon="@drawable/ic_today_24px" />
 
+    <com.nightonke.boommenu.BoomMenuButton
+        android:id="@+id/bmb"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
+
 </LinearLayout>
