--- a/AplicacionSpinner2/app/src/main/res/layout/activity_vista_formulario.xml
+++ b/AplicacionSpinner2/app/src/main/res/layout/activity_vista_formulario.xml
@@ -89,18 +89,20 @@
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:orientation="horizontal">
+
             <com.google.android.material.button.MaterialButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:text="@string/action_1"
-                style="?attr/borderlessButtonStyle"
-                />
-            <com.google.android.material.button.MaterialButton
+                android:id="@+id/BotonConfirmar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/action_2"
-                style="?attr/borderlessButtonStyle"
+                style="?attr/materialButtonStyle"
+                />
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/BotonModificar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/action_1"
+                style="?attr/materialButtonStyle"
                 />
         </LinearLayout>
 
