--- a/AplicacionSpinner2/app/src/main/res/layout/activity_main.xml
+++ b/AplicacionSpinner2/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,8 @@
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/card"
-        android:layout_width="371dp"
-        android:layout_height="696dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_margin="8dp"
         app:cardElevation="0dp"
         app:strokeColor="@color/stroke_color"
@@ -46,7 +46,8 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/campoNombre"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:inputType="text"/>
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -96,7 +97,8 @@
                     android:id="@+id/menuReal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="none" />
+                    android:inputType="none"
+                    android:enabled="false"/>
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -139,8 +141,5 @@
 
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
-
-
-
 
 </LinearLayout>
